--- a/functions/functions.ipynb
+++ b/functions/functions.ipynb
@@ -2,6 +2,130 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<OpenAIObject chat.completion id=chatcmpl-7UQvepKVR78ty050i8cv3vnHqL0cQ at 0x10b1b9cc0> JSON: {\n",
+       "  \"id\": \"chatcmpl-7UQvepKVR78ty050i8cv3vnHqL0cQ\",\n",
+       "  \"object\": \"chat.completion\",\n",
+       "  \"created\": 1687487710,\n",
+       "  \"model\": \"gpt-3.5-turbo-0613\",\n",
+       "  \"choices\": [\n",
+       "    {\n",
+       "      \"index\": 0,\n",
+       "      \"message\": {\n",
+       "        \"role\": \"assistant\",\n",
+       "        \"content\": null,\n",
+       "        \"function_call\": {\n",
+       "          \"name\": \"get_current_weather\",\n",
+       "          \"arguments\": \"{\\n\\\"location\\\": \\\"Boston, MA\\\"\\n}\"\n",
+       "        }\n",
+       "      },\n",
+       "      \"finish_reason\": \"function_call\"\n",
+       "    }\n",
+       "  ],\n",
+       "  \"usage\": {\n",
+       "    \"prompt_tokens\": 82,\n",
+       "    \"completion_tokens\": 17,\n",
+       "    \"total_tokens\": 99\n",
+       "  }\n",
+       "}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import openai\n",
+    "\n",
+    "functions = [\n",
+    "     {\n",
+    "      \"name\": \"get_current_weather\",\n",
+    "      \"description\": \"Get the current weather in a given location\",\n",
+    "      \"parameters\": {\n",
+    "        \"type\": \"object\",\n",
+    "        \"properties\": {\n",
+    "          \"location\": {\n",
+    "            \"type\": \"string\",\n",
+    "            \"description\": \"The city and state, e.g. San Francisco, CA\"\n",
+    "          },\n",
+    "          \"unit\": {\n",
+    "            \"type\": \"string\",\n",
+    "            \"enum\": [\"celsius\", \"fahrenheit\"]\n",
+    "          }\n",
+    "        },\n",
+    "        \"required\": [\"location\"]\n",
+    "      }\n",
+    "    } \n",
+    "  ]\n",
+    "\n",
+    "messages = [\n",
+    "    {\"role\": \"user\", \"content\": \"What is the weather like in Boston?\"}\n",
+    "    ]\n",
+    "\n",
+    "openai.ChatCompletion.create(\n",
+    "  model=\"gpt-3.5-turbo-0613\",\n",
+    "  messages=messages,\n",
+    "  functions=functions\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<OpenAIObject chat.completion id=chatcmpl-7UQvlkOVWZTJy2pj3AI3SlnlJ71lS at 0x10b230db0> JSON: {\n",
+       "  \"id\": \"chatcmpl-7UQvlkOVWZTJy2pj3AI3SlnlJ71lS\",\n",
+       "  \"object\": \"chat.completion\",\n",
+       "  \"created\": 1687487717,\n",
+       "  \"model\": \"gpt-3.5-turbo-0613\",\n",
+       "  \"choices\": [\n",
+       "    {\n",
+       "      \"index\": 0,\n",
+       "      \"message\": {\n",
+       "        \"role\": \"assistant\",\n",
+       "        \"content\": \"The current weather in Boston is 22 degrees Celsius and sunny.\"\n",
+       "      },\n",
+       "      \"finish_reason\": \"stop\"\n",
+       "    }\n",
+       "  ],\n",
+       "  \"usage\": {\n",
+       "    \"prompt_tokens\": 127,\n",
+       "    \"completion_tokens\": 14,\n",
+       "    \"total_tokens\": 141\n",
+       "  }\n",
+       "}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "messages.extend([\n",
+    "        {\"role\": \"assistant\", \"content\": None, \"function_call\": {\"name\": \"get_current_weather\", \"arguments\": \"{ \\\"location\\\": \\\"Boston, MA\\\"}\" } },\n",
+    "        {\"role\": \"function\", \"name\": \"get_current_weather\", \"content\": \"{\\\"temperature\\\": \\\"22\\\", \\\"unit\\\": \\\"celsius\\\", \\\"description\\\": \\\"Sunny\\\"}\"}    \n",
+    "])\n",
+    "\n",
+    "openai.ChatCompletion.create(\n",
+    "  model=\"gpt-3.5-turbo-0613\",\n",
+    "  messages=messages,\n",
+    "  functions=functions\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -9,8 +133,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "python-3.9.12",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
