Using gpt-3.5-turbo-0613

--- a/functions/math.ipynb
+++ b/functions/math.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import openai\n",
     "from latex2sympy2 import latex2sympy\n",
     "\n",
-    "model = \"gpt-3.5-turbo-0613\"\n",
+    "#model = \"gpt-3.5-turbo-0613\"\n",
+    "model = \"gpt-4-0613\"\n",
     "\n",
     "def calc_latex_math_expression(expression):\n",
     "    sympy_expr = latex2sympy(expression)\n",
@@ -40,23 +41,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<OpenAIObject chat.completion id=chatcmpl-7URGEx0Qa1g0HOJWjlHi5UtGBZi4g at 0x117ace770> JSON: {\n",
-       "  \"id\": \"chatcmpl-7URGEx0Qa1g0HOJWjlHi5UtGBZi4g\",\n",
+       "<OpenAIObject chat.completion id=chatcmpl-7UmNfKMRmZFywKFrqANwC2qn3EjrG at 0x128139bd0> JSON: {\n",
+       "  \"id\": \"chatcmpl-7UmNfKMRmZFywKFrqANwC2qn3EjrG\",\n",
        "  \"object\": \"chat.completion\",\n",
-       "  \"created\": 1687488986,\n",
-       "  \"model\": \"gpt-3.5-turbo-0613\",\n",
+       "  \"created\": 1687570171,\n",
+       "  \"model\": \"gpt-4-0613\",\n",
        "  \"choices\": [\n",
        "    {\n",
        "      \"index\": 0,\n",
        "      \"message\": {\n",
        "        \"role\": \"assistant\",\n",
-       "        \"content\": null,\n",
+       "        \"content\": \"To find out how old your brother is, take your age and subtract your brother's age difference from it.\\n\\nStep 1: Start with your age, which is 42 years.\\nStep 2: Subtract your brother's age difference from your age. He is 3 years younger than you, so you subtract 3 from 42. \\n\\nNow let's calculate this:\",\n",
        "        \"function_call\": {\n",
        "          \"name\": \"calc_latex_math_expression\",\n",
        "          \"arguments\": \"{\\n  \\\"expression\\\": \\\"42 - 3\\\"\\n}\"\n",
@@ -67,19 +68,18 @@
        "  ],\n",
        "  \"usage\": {\n",
        "    \"prompt_tokens\": 86,\n",
-       "    \"completion_tokens\": 21,\n",
-       "    \"total_tokens\": 107\n",
+       "    \"completion_tokens\": 98,\n",
+       "    \"total_tokens\": 184\n",
        "  }\n",
        "}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "openai.ChatCompletion.create(\n",
     "  model=model,\n",
     "  messages=messages,\n",
@@ -109,36 +109,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<OpenAIObject chat.completion id=chatcmpl-7URI1GQzh1Kz0EPXKmhsNUvMCiSqW at 0x12e9218b0> JSON: {\n",
-       "  \"id\": \"chatcmpl-7URI1GQzh1Kz0EPXKmhsNUvMCiSqW\",\n",
+       "<OpenAIObject chat.completion id=chatcmpl-7UmPro3cZRxqxvyqQ3oxAE1l38d2K at 0x1281d46d0> JSON: {\n",
+       "  \"id\": \"chatcmpl-7UmPro3cZRxqxvyqQ3oxAE1l38d2K\",\n",
        "  \"object\": \"chat.completion\",\n",
-       "  \"created\": 1687489097,\n",
-       "  \"model\": \"gpt-3.5-turbo-0613\",\n",
+       "  \"created\": 1687570307,\n",
+       "  \"model\": \"gpt-4-0613\",\n",
        "  \"choices\": [\n",
        "    {\n",
        "      \"index\": 0,\n",
        "      \"message\": {\n",
        "        \"role\": \"assistant\",\n",
-       "        \"content\": \"If you are 42 years old and your brother is 3 years younger than you, we can calculate your brother's age by subtracting 3 from your age. \\n\\nStep 1: 42 - 3 = 39\\n\\nTherefore, your brother is 39 years old.\"\n",
+       "        \"content\": \"To figure out your brother's age, we need to subtract the difference in your ages from your current age. So since you are 42 years old, and your brother is three years younger than you, we would subtract 3 from 42.\\n\\nHere is the math: 42 - 3 = 39\\n\\nSo, your brother is 39 years old.\"\n",
        "      },\n",
        "      \"finish_reason\": \"stop\"\n",
        "    }\n",
        "  ],\n",
        "  \"usage\": {\n",
        "    \"prompt_tokens\": 117,\n",
-       "    \"completion_tokens\": 59,\n",
-       "    \"total_tokens\": 176\n",
+       "    \"completion_tokens\": 75,\n",
+       "    \"total_tokens\": 192\n",
        "  }\n",
        "}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
