Parsing function call response

--- a/functions/math.ipynb
+++ b/functions/math.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import openai\n",
     "from latex2sympy2 import latex2sympy\n",
+    "import json\n",
     "\n",
     "#model = \"gpt-3.5-turbo-0613\"\n",
     "model = \"gpt-4-0613\"\n",
@@ -34,6 +35,10 @@
     "    } \n",
     "  ]\n",
     "\n",
+    "available_functions = {\n",
+    "    \"calc_latex_math_expression\": calc_latex_math_expression,\n",
+    "}\n",
+    "\n",
     "messages = [\n",
     "    {\"role\": \"user\", \"content\": \"If I am 42 years old and my brother is 3 years younger than me, how old is my brother? Explain step by step.\"},\n",
     "    ]"
@@ -41,50 +46,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<OpenAIObject chat.completion id=chatcmpl-7UmNfKMRmZFywKFrqANwC2qn3EjrG at 0x128139bd0> JSON: {\n",
-       "  \"id\": \"chatcmpl-7UmNfKMRmZFywKFrqANwC2qn3EjrG\",\n",
-       "  \"object\": \"chat.completion\",\n",
-       "  \"created\": 1687570171,\n",
-       "  \"model\": \"gpt-4-0613\",\n",
-       "  \"choices\": [\n",
-       "    {\n",
-       "      \"index\": 0,\n",
-       "      \"message\": {\n",
-       "        \"role\": \"assistant\",\n",
-       "        \"content\": \"To find out how old your brother is, take your age and subtract your brother's age difference from it.\\n\\nStep 1: Start with your age, which is 42 years.\\nStep 2: Subtract your brother's age difference from your age. He is 3 years younger than you, so you subtract 3 from 42. \\n\\nNow let's calculate this:\",\n",
-       "        \"function_call\": {\n",
-       "          \"name\": \"calc_latex_math_expression\",\n",
-       "          \"arguments\": \"{\\n  \\\"expression\\\": \\\"42 - 3\\\"\\n}\"\n",
-       "        }\n",
-       "      },\n",
-       "      \"finish_reason\": \"function_call\"\n",
-       "    }\n",
-       "  ],\n",
-       "  \"usage\": {\n",
-       "    \"prompt_tokens\": 86,\n",
-       "    \"completion_tokens\": 98,\n",
-       "    \"total_tokens\": 184\n",
-       "  }\n",
-       "}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "openai.ChatCompletion.create(\n",
-    "  model=model,\n",
-    "  messages=messages,\n",
-    "  functions=functions\n",
-    ")"
+    "def run_conversation(messages):\n",
+    "  # Step 1: send the conversation and available functions to GPT\n",
+    "  response = openai.ChatCompletion.create(\n",
+    "    model=model,\n",
+    "    messages=messages,\n",
+    "    functions=functions\n",
+    "  )\n",
+    "  response_message = response[\"choices\"][0][\"message\"]\n",
+    "  print(response_message)\n",
+    "\n",
+    "  # Step 2: check if GPT wanted to call a function\n",
+    "  if response_message.get(\"function_call\"):\n",
+    "    # Step 3: call the function\n",
+    "    # Note: the JSON response may not always be valid; be sure to handle errors\n",
+    "    function_name = response_message[\"function_call\"][\"name\"]\n",
+    "    function_to_call = available_functions[function_name]\n",
+    "    function_args = json.loads(response_message[\"function_call\"][\"arguments\"])\n",
+    "    function_response = function_to_call(\n",
+    "        expression=function_args.get(\"expression\"),\n",
+    "    )\n",
+    "\n",
+    "    # Step 4: send the info on the function call and function response to GPT\n",
+    "    messages.append(response_message)  # extend conversation with assistant's reply\n",
+    "    messages.append(\n",
+    "        {\n",
+    "            \"role\": \"function\",\n",
+    "            \"name\": function_name,\n",
+    "            \"content\": function_response,\n",
+    "        }\n",
+    "    )  # extend conversation with function response\n",
+    "    second_response = openai.ChatCompletion.create(\n",
+    "        model=\"gpt-3.5-turbo-0613\",\n",
+    "        messages=messages,\n",
+    "    )  # get a new response from GPT where it can see the function response\n",
+    "    return second_response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_conversation(messages)"
    ]
   },
   {
@@ -105,55 +114,6 @@
    ],
    "source": [
     "calc_latex_math_expression(expression=\"42 - 3\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<OpenAIObject chat.completion id=chatcmpl-7UmPro3cZRxqxvyqQ3oxAE1l38d2K at 0x1281d46d0> JSON: {\n",
-       "  \"id\": \"chatcmpl-7UmPro3cZRxqxvyqQ3oxAE1l38d2K\",\n",
-       "  \"object\": \"chat.completion\",\n",
-       "  \"created\": 1687570307,\n",
-       "  \"model\": \"gpt-4-0613\",\n",
-       "  \"choices\": [\n",
-       "    {\n",
-       "      \"index\": 0,\n",
-       "      \"message\": {\n",
-       "        \"role\": \"assistant\",\n",
-       "        \"content\": \"To figure out your brother's age, we need to subtract the difference in your ages from your current age. So since you are 42 years old, and your brother is three years younger than you, we would subtract 3 from 42.\\n\\nHere is the math: 42 - 3 = 39\\n\\nSo, your brother is 39 years old.\"\n",
-       "      },\n",
-       "      \"finish_reason\": \"stop\"\n",
-       "    }\n",
-       "  ],\n",
-       "  \"usage\": {\n",
-       "    \"prompt_tokens\": 117,\n",
-       "    \"completion_tokens\": 75,\n",
-       "    \"total_tokens\": 192\n",
-       "  }\n",
-       "}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "messages.extend([\n",
-    "        {\"role\": \"assistant\", \"content\": None, \"function_call\": {\"name\": \"calc_latex_math_expression\", \"arguments\": \"{ \\\"expression\\\": \\\"42 - 3\\\"}\" } },\n",
-    "        {\"role\": \"function\", \"name\": \"calc_latex_math_expression\", \"content\": \"39\"}\n",
-    "])\n",
-    "\n",
-    "openai.ChatCompletion.create(\n",
-    "  model=model,\n",
-    "  messages=messages,\n",
-    "  functions=functions\n",
-    ")"
    ]
   },
   {
