run_conversation automatically loops on function calls now

--- a/functions/math.ipynb
+++ b/functions/math.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,20 +37,19 @@
     "\n",
     "available_functions = {\n",
     "    \"calc_latex_math_expression\": calc_latex_math_expression,\n",
-    "}\n",
-    "\n",
-    "messages = [\n",
-    "    {\"role\": \"user\", \"content\": \"If I am 42 years old and my brother is 3 years younger than me, how old is my brother? Explain step by step.\"},\n",
-    "    ]"
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_conversation(messages):\n",
+    "def run_conversation(content):\n",
+    "  messages = [\n",
+    "    {\"role\": \"user\", \"content\": content},\n",
+    "    ]\n",
     "  # Step 1: send the conversation and available functions to GPT\n",
     "  response = openai.ChatCompletion.create(\n",
     "    model=model,\n",
@@ -58,10 +57,10 @@
     "    functions=functions\n",
     "  )\n",
     "  response_message = response[\"choices\"][0][\"message\"]\n",
-    "  print(response_message)\n",
+    "  messages.append(response_message)  # extend conversation with assistant's reply\n",
     "\n",
     "  # Step 2: check if GPT wanted to call a function\n",
-    "  if response_message.get(\"function_call\"):\n",
+    "  while response_message.get(\"function_call\"):\n",
     "    # Step 3: call the function\n",
     "    # Note: the JSON response may not always be valid; be sure to handle errors\n",
     "    function_name = response_message[\"function_call\"][\"name\"]\n",
@@ -72,7 +71,6 @@
     "    )\n",
     "\n",
     "    # Step 4: send the info on the function call and function response to GPT\n",
-    "    messages.append(response_message)  # extend conversation with assistant's reply\n",
     "    messages.append(\n",
     "        {\n",
     "            \"role\": \"function\",\n",
@@ -80,48 +78,42 @@
     "            \"content\": function_response,\n",
     "        }\n",
     "    )  # extend conversation with function response\n",
-    "    second_response = openai.ChatCompletion.create(\n",
-    "        model=\"gpt-3.5-turbo-0613\",\n",
+    "    response = openai.ChatCompletion.create(\n",
+    "        model=model,\n",
     "        messages=messages,\n",
     "    )  # get a new response from GPT where it can see the function response\n",
-    "    return second_response"
+    "    response_message = response[\"choices\"][0][\"message\"]\n",
+    "    messages.append(response_message)  # extend conversation with assistant's reply\n",
+    "\n",
+    "  for message in messages:\n",
+    "    print(message[\"role\"] + \": \" + message[\"content\"])\n",
+    "    if message.get(\"function_call\"):\n",
+    "      print(\" -> calling function \" + message[\"function_call\"][\"name\"] + \" with arguments \" + json.dumps(message[\"function_call\"][\"arguments\"]))\n",
+    "  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "run_conversation(messages)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'39'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user: If I am 42 years old and my brother is 3 years younger than me, how old is my brother? Explain step by step.\n",
+      "assistant: To calculate your brother's age, we subtract your brother's age difference from your age. This can be represented as a mathematical expression in Latex form as \"42 - 3\", where 42 is your age and 3 indicates how many years your brother is younger than you.\n",
+      "\n",
+      "Let's perform this calculation.\n",
+      " -> calling function calc_latex_math_expression with arguments \"{\\n  \\\"expression\\\": \\\"42 - 3\\\"\\n}\"\n",
+      "function: 39\n",
+      "assistant: After performing the subtraction operation (42 - 3), the result is 39, and therefore, your brother is 39 years old.\n"
+     ]
     }
    ],
    "source": [
-    "calc_latex_math_expression(expression=\"42 - 3\")"
+    "run_conversation(\"If I am 42 years old and my brother is 3 years younger than me, how old is my brother? Explain step by step.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
