More generic run_conversation function

--- a/functions/math.ipynb
+++ b/functions/math.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,9 +66,7 @@
     "    function_name = response_message[\"function_call\"][\"name\"]\n",
     "    function_to_call = available_functions[function_name]\n",
     "    function_args = json.loads(response_message[\"function_call\"][\"arguments\"])\n",
-    "    function_response = function_to_call(\n",
-    "        expression=function_args.get(\"expression\"),\n",
-    "    )\n",
+    "    function_response = function_to_call(**function_args)\n",
     "\n",
     "    # Step 4: send the info on the function call and function response to GPT\n",
     "    messages.append(\n",
@@ -94,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -102,18 +100,106 @@
      "output_type": "stream",
      "text": [
       "user: If I am 42 years old and my brother is 3 years younger than me, how old is my brother? Explain step by step.\n",
-      "assistant: To calculate your brother's age, we subtract your brother's age difference from your age. This can be represented as a mathematical expression in Latex form as \"42 - 3\", where 42 is your age and 3 indicates how many years your brother is younger than you.\n",
+      "assistant: Sure, let's solve this step by step:\n",
       "\n",
-      "Let's perform this calculation.\n",
-      " -> calling function calc_latex_math_expression with arguments \"{\\n  \\\"expression\\\": \\\"42 - 3\\\"\\n}\"\n",
+      "1. Express the situation mathematically: You're 42 years old, and your brother is 3 years younger than you. This can be represented with the equation: Your age - 3 = Your brother's age.\n",
+      "\n",
+      "2. In this equation, your age is given as 42, so we substitute it in: 42 - 3 = Your brother's age.\n",
+      "\n",
+      "3. To find out your brother's age, we calculate the expression 42 - 3.\n",
+      "\n",
+      "Let's perform the calculation using a function.\n",
+      " -> calling function calc_latex_math_expression with arguments \"{\\n\\\"expression\\\": \\\"42 - 3\\\"\\n}\"\n",
       "function: 39\n",
-      "assistant: After performing the subtraction operation (42 - 3), the result is 39, and therefore, your brother is 39 years old.\n"
+      "assistant: 4. So, the result of 42 - 3 is 39.\n",
+      "\n",
+      "Therefore, if you're 42 years old and your brother is 3 years younger than you, your brother is 39 years old.\n"
      ]
     }
    ],
    "source": [
     "run_conversation(\"If I am 42 years old and my brother is 3 years younger than me, how old is my brother? Explain step by step.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user: If a circle has a radius of 3 cm, what is its symbolic area? Explain step by step.\n",
+      "assistant: The area of a circle is given by the formula:\n",
+      "\n",
+      "A = πr²\n",
+      "\n",
+      "where:\n",
+      "- A is the area of the circle\n",
+      "- r is the radius of the circle\n",
+      "- π (Pi) is a constant approximately equal to 3.14159\n",
+      "\n",
+      "In this case, the radius (r) is given as 3 cm. So, we plug that into our equation, we get the symbolic area of the circle as:\n",
+      "\n",
+      "A = π(3cm)²\n",
+      "\n",
+      "This is the symbolic representation of the area of the circle. It means we are squaring the radius (which is 3 cm) and then multiplying the result by Pi to get the area.\n",
+      "\n",
+      "The calculation could proceed as follows: \n",
+      "\n",
+      "(3cm)² = 9 cm² (because 3 cm * 3 cm = 9 cm²), \n",
+      "\n",
+      "and then π(9 cm²) would give us the exact area in cm². \n",
+      "\n",
+      "To get the numerical result of the computation according to the Pi value, we can calculate this.\n",
+      " -> calling function calc_latex_math_expression with arguments \"{\\n\\\"expression\\\": \\\"\\\\\\\\pi * 3^2\\\"\\n}\"\n",
+      "function: 9*pi\n",
+      "assistant: The exact symbolic area of the circle is therefore 9π square cm.\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_conversation(\"If a circle has a radius of 3 cm, what is its symbolic area? Explain step by step.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user: If a sphere has a radius of 3 cm, what is its volume? Explain step by step.\n",
+      "assistant: The formula to calculate the volume of a sphere is:\n",
+      "\n",
+      "V = 4/3 * π * r³\n",
+      "\n",
+      "Where V is the volume, r is the radius of the sphere, and π is approximately 3.14159.\n",
+      "\n",
+      "Since the problem states the radius is 3 cm, we simply insert 3 cm into the formula in place of r:\n",
+      "\n",
+      "V = 4/3 * π * (3 cm)³\n",
+      "\n",
+      "I will do the calculation now.\n",
+      " -> calling function calc_latex_math_expression with arguments \"{\\n  \\\"expression\\\": \\\"4/3 * 3.14159 * 3^3\\\"\\n}\"\n",
+      "function: 2827431/25000\n",
+      "assistant: So the volume of the sphere with a radius of 3 cm is 113.097 cm³.\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_conversation(\"If a sphere has a radius of 3 cm, what is its volume? Explain step by step.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
