--- a/functions/weather.ipynb
+++ b/functions/weather.ipynb
@@ -2,46 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<OpenAIObject chat.completion id=chatcmpl-7UQvepKVR78ty050i8cv3vnHqL0cQ at 0x10b1b9cc0> JSON: {\n",
-       "  \"id\": \"chatcmpl-7UQvepKVR78ty050i8cv3vnHqL0cQ\",\n",
-       "  \"object\": \"chat.completion\",\n",
-       "  \"created\": 1687487710,\n",
-       "  \"model\": \"gpt-3.5-turbo-0613\",\n",
-       "  \"choices\": [\n",
-       "    {\n",
-       "      \"index\": 0,\n",
-       "      \"message\": {\n",
-       "        \"role\": \"assistant\",\n",
-       "        \"content\": null,\n",
-       "        \"function_call\": {\n",
-       "          \"name\": \"get_current_weather\",\n",
-       "          \"arguments\": \"{\\n\\\"location\\\": \\\"Boston, MA\\\"\\n}\"\n",
-       "        }\n",
-       "      },\n",
-       "      \"finish_reason\": \"function_call\"\n",
-       "    }\n",
-       "  ],\n",
-       "  \"usage\": {\n",
-       "    \"prompt_tokens\": 82,\n",
-       "    \"completion_tokens\": 17,\n",
-       "    \"total_tokens\": 99\n",
-       "  }\n",
-       "}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import openai\n",
+    "import json\n",
+    "\n",
+    "model = \"gpt-3.5-turbo-0613\"\n",
+    "\n",
+    "def get_current_weather(location, unit = \"fahrenheit\"):\n",
+    "    return \"70\"\n",
     "\n",
     "functions = [\n",
     "     {\n",
@@ -64,64 +35,80 @@
     "    } \n",
     "  ]\n",
     "\n",
-    "messages = [\n",
-    "    {\"role\": \"user\", \"content\": \"What is the weather like in Boston?\"}\n",
-    "    ]\n",
-    "\n",
-    "openai.ChatCompletion.create(\n",
-    "  model=\"gpt-3.5-turbo-0613\",\n",
-    "  messages=messages,\n",
-    "  functions=functions\n",
-    ")"
+    "available_functions = {\n",
+    "    \"get_current_weather\": get_current_weather,\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_conversation(content):\n",
+    "  messages = [\n",
+    "    {\"role\": \"user\", \"content\": content},\n",
+    "    ]\n",
+    "  # Step 1: send the conversation and available functions to GPT\n",
+    "  response = openai.ChatCompletion.create(\n",
+    "    model=model,\n",
+    "    messages=messages,\n",
+    "    functions=functions\n",
+    "  )\n",
+    "  response_message = response[\"choices\"][0][\"message\"]\n",
+    "  messages.append(response_message)  # extend conversation with assistant's reply\n",
+    "\n",
+    "  # Step 2: check if GPT wanted to call a function\n",
+    "  while response_message.get(\"function_call\"):\n",
+    "    # Step 3: call the function\n",
+    "    # Note: the JSON response may not always be valid; be sure to handle errors\n",
+    "    function_name = response_message[\"function_call\"][\"name\"]\n",
+    "    function_to_call = available_functions[function_name]\n",
+    "    function_args = json.loads(response_message[\"function_call\"][\"arguments\"])\n",
+    "    function_response = function_to_call(**function_args)\n",
+    "\n",
+    "    # Step 4: send the info on the function call and function response to GPT\n",
+    "    messages.append(\n",
+    "        {\n",
+    "            \"role\": \"function\",\n",
+    "            \"name\": function_name,\n",
+    "            \"content\": function_response,\n",
+    "        }\n",
+    "    )  # extend conversation with function response\n",
+    "    response = openai.ChatCompletion.create(\n",
+    "        model=model,\n",
+    "        messages=messages,\n",
+    "    )  # get a new response from GPT where it can see the function response\n",
+    "    response_message = response[\"choices\"][0][\"message\"]\n",
+    "    messages.append(response_message)  # extend conversation with assistant's reply\n",
+    "\n",
+    "  for message in messages:\n",
+    "    if message.get(\"content\"):\n",
+    "      print(message[\"role\"] + \": \" + message[\"content\"])\n",
+    "    if message.get(\"function_call\"):\n",
+    "      print(\" -> calling function \" + message[\"function_call\"][\"name\"] + \" with arguments \" + json.dumps(message[\"function_call\"][\"arguments\"]))\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<OpenAIObject chat.completion id=chatcmpl-7UQvlkOVWZTJy2pj3AI3SlnlJ71lS at 0x10b230db0> JSON: {\n",
-       "  \"id\": \"chatcmpl-7UQvlkOVWZTJy2pj3AI3SlnlJ71lS\",\n",
-       "  \"object\": \"chat.completion\",\n",
-       "  \"created\": 1687487717,\n",
-       "  \"model\": \"gpt-3.5-turbo-0613\",\n",
-       "  \"choices\": [\n",
-       "    {\n",
-       "      \"index\": 0,\n",
-       "      \"message\": {\n",
-       "        \"role\": \"assistant\",\n",
-       "        \"content\": \"The current weather in Boston is 22 degrees Celsius and sunny.\"\n",
-       "      },\n",
-       "      \"finish_reason\": \"stop\"\n",
-       "    }\n",
-       "  ],\n",
-       "  \"usage\": {\n",
-       "    \"prompt_tokens\": 127,\n",
-       "    \"completion_tokens\": 14,\n",
-       "    \"total_tokens\": 141\n",
-       "  }\n",
-       "}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user: What is the weather like in Boston?\n",
+      " -> calling function get_current_weather with arguments \"{\\n  \\\"location\\\": \\\"Boston, MA\\\"\\n}\"\n",
+      "function: 70\n",
+      "assistant: The current weather in Boston, MA is 70°F.\n"
+     ]
     }
    ],
    "source": [
-    "messages.extend([\n",
-    "        {\"role\": \"assistant\", \"content\": None, \"function_call\": {\"name\": \"get_current_weather\", \"arguments\": \"{ \\\"location\\\": \\\"Boston, MA\\\"}\" } },\n",
-    "        {\"role\": \"function\", \"name\": \"get_current_weather\", \"content\": \"{\\\"temperature\\\": \\\"22\\\", \\\"unit\\\": \\\"celsius\\\", \\\"description\\\": \\\"Sunny\\\"}\"}    \n",
-    "])\n",
-    "\n",
-    "openai.ChatCompletion.create(\n",
-    "  model=\"gpt-3.5-turbo-0613\",\n",
-    "  messages=messages,\n",
-    "  functions=functions\n",
-    ")"
+    "run_conversation(\"What is the weather like in Boston?\")"
    ]
   },
   {
