--- a/functions/math.ipynb
+++ b/functions/math.ipynb
@@ -84,7 +84,8 @@
     "    messages.append(response_message)  # extend conversation with assistant's reply\n",
     "\n",
     "  for message in messages:\n",
-    "    print(message[\"role\"] + \": \" + message[\"content\"])\n",
+    "    if message.get(\"content\"):\n",
+    "      print(message[\"role\"] + \": \" + message[\"content\"])\n",
     "    if message.get(\"function_call\"):\n",
     "      print(\" -> calling function \" + message[\"function_call\"][\"name\"] + \" with arguments \" + json.dumps(message[\"function_call\"][\"arguments\"]))\n",
     "  "
