--- a/functions/ask_user.ipynb
+++ b/functions/ask_user.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,8 @@
     "    messages.append(response_message)  # extend conversation with assistant's reply\n",
     "\n",
     "  for message in messages:\n",
-    "    print(message[\"role\"] + \": \" + message[\"content\"])\n",
+    "    if message.get(\"content\"):\n",
+    "      print(message[\"role\"] + \": \" + message[\"content\"])\n",
     "    if message.get(\"function_call\"):\n",
     "      print(\" -> calling function \" + message[\"function_call\"][\"name\"] + \" with arguments \" + json.dumps(message[\"function_call\"][\"arguments\"]))\n",
     "  "
@@ -112,149 +113,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "user: If I am 42 years old and my brother is 3 years younger than me, how old is my brother? Explain step by step.\n",
-      "assistant: Sure, let's break it down step by step:\n",
+      "user: If my brother is 3 years younger than me, how old is my brother? Ask user for any missing information. Explain step by step.\n",
+      "assistant: Sure, in order to perform the calculation, I need to know your age. Let me ask for this.\n",
+      " -> calling function ask_user with arguments \"{\\n  \\\"question\\\": \\\"What is your current age?\\\"\\n}\"\n",
+      "function: 34\n",
+      "assistant: Thank you for providing your age. Now we can proceed with the calculation. Here's the step-by-step process:\n",
       "\n",
-      "Step 1: Start with your age, which is 42 years old.\n",
-      "Step 2: The problem states that your brother is 3 years younger than you.\n",
-      "Step 3: To find out your brother's age, subtract 3 from your age.\n",
+      "1. You mentioned that your brother is 3 years younger than you.\n",
+      "2. Your age is 34 years.\n",
+      "3. To find out your brother's age, we subtract 3 from your age.\n",
       "\n",
-      "This is expressed in the equation below, where A represents your age and B represents your brother's:\n",
-      "B = A - 3\n",
-      "Now let's compute it.\n",
-      " -> calling function calc_latex_math_expression with arguments \"{\\n  \\\"expression\\\": \\\"42 - 3\\\"\\n}\"\n",
-      "function: 39\n",
-      "assistant: After subtracting 3 from 42, we get 39. Therefore, your brother is 39 years old.\n"
+      "So, the calculation will be: 34 - 3 = 31\n",
+      "\n",
+      "Therefore, your brother is 31 years old.\n"
      ]
     }
    ],
    "source": [
-    "run_conversation(\"If I am 42 years old and my brother is 3 years younger than me, how old is my brother? Explain step by step.\")"
+    "run_conversation(\"If my brother is 3 years younger than me, how old is my brother? Ask user for any missing information. Explain step by step.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "user: If a circle has a radius of 3 cm, what is its symbolic area? Explain step by step.\n",
-      "assistant: The formula for calculating the area of a circle is given by:\n",
-      "\n",
-      "A = πr²\n",
-      "\n",
-      "Where:\n",
-      "- \"A\" is the area of the circle\n",
-      "- \"r\" is the radius of the circle\n",
-      "- \"π\" is a constant whose approximate value is 3.14159\n",
-      "\n",
-      "Step 1:\n",
-      "Substitute the given radius (r = 3 cm) into the formula:\n",
-      "\n",
-      "A = π * 3²\n",
-      "\n",
-      "Step 2: \n",
-      "Square the radius (3² = 9):\n",
-      "\n",
-      "A = π * 9\n",
-      "\n",
-      "So, the symbolic representation of the area of this circle is 9π square cm. \n",
-      "\n",
-      "Would you like to calculate the numerical value for this?\n"
-     ]
-    }
-   ],
-   "source": [
-    "run_conversation(\"If a circle has a radius of 3 cm, what is its symbolic area? Explain step by step.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "user: If a sphere has a radius of 3 cm, what is its volume? Explain step by step.\n",
-      "assistant: The volume V of a sphere is given by the formula:\n",
-      "\n",
-      "V = 4/3 * π * r³\n",
-      "\n",
-      "Where:\n",
-      "- r is the radius of the sphere.\n",
-      "- π is a mathematical constant whose approximate value is 3.14159.\n",
-      "\n",
-      "Step 1: Plug the radius value into the formula.\n",
-      "Let's substitute r = 3 cm into the formula. This will give us:\n",
-      "\n",
-      "V = 4/3 * π * 3³\n",
-      "\n",
-      "Let's calculate this.\n",
-      " -> calling function calc_latex_math_expression with arguments \"{\\n  \\\"expression\\\": \\\"4/3 * pi * 3^3\\\"\\n}\"\n",
-      "function: 36*i*p\n",
-      "assistant: The volume of the sphere is approximately 36π cubic cm. If you want a decimal approximation, you can calculate this as well.\n"
-     ]
-    }
-   ],
-   "source": [
-    "run_conversation(\"If a sphere has a radius of 3 cm, what is its volume? Explain step by step.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "user: If my brother is 3 years younger than me, how old is my brother? Explain step by step.\n",
-      "assistant: Sure, there are a few necessary steps to determine the age of your brother.\n",
-      "\n",
-      "Step 1: Know your age\n",
-      "We need to know your current age, which we will use as our starting point.\n",
-      "\n",
-      "Step 2: Perform subtraction\n",
-      "We subtract 3 years from your current age. This subtraction is performed because your brother is 3 years younger than you are.\n",
-      "\n",
-      "Now, let's get your age first. \n",
-      "\n",
-      "Could you please tell me how old you are currently?\n",
-      " -> calling function ask_user with arguments \"{\\n  \\\"question\\\": \\\"Could you please tell me how old you are currently?\\\"\\n}\"\n",
-      "function: 42\n",
-      "assistant: Thank you. \n",
-      "\n",
-      "Step 3: Now to calculate the age of your brother. This is done by subtracting 3 years from your age.\n",
-      "\n",
-      "So, we will do 42 (your age) - 3 = 39\n",
-      "\n",
-      "So, your brother is 39 years old.\n"
-     ]
-    }
-   ],
-   "source": [
-    "run_conversation(\"If my brother is 3 years younger than me, how old is my brother? Explain step by step.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
