Removed sympy code for ask_user notebook

--- a/functions/ask_user.ipynb
+++ b/functions/ask_user.ipynb
@@ -2,40 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import openai\n",
-    "from latex2sympy2 import latex2sympy\n",
     "import json\n",
     "\n",
     "#model = \"gpt-3.5-turbo-0613\"\n",
     "model = \"gpt-4-0613\"\n",
     "\n",
-    "def calc_latex_math_expression(expression):\n",
-    "    sympy_expr = latex2sympy(expression)\n",
-    "    result = sympy_expr.doit()\n",
-    "    return str(result)\n",
-    "\n",
     "def ask_user(question):\n",
     "    return input(question)\n",
     "\n",
     "functions = [\n",
-    "     {\n",
-    "      \"name\": \"calc_latex_math_expression\",\n",
-    "      \"description\": \"Calculate a Latex mathematical expression\",\n",
-    "      \"parameters\": {\n",
-    "        \"type\": \"object\",\n",
-    "        \"properties\": {\n",
-    "          \"expression\": {\n",
-    "            \"type\": \"string\",\n",
-    "            \"description\": \"The Latex expression to calculate\"\n",
-    "          },\n",
-    "        },\n",
-    "        \"required\": [\"expression\"]\n",
-    "      }\n",
-    "    },\n",
     "    {\n",
     "      \"name\": \"ask_user\",\n",
     "      \"description\": \"Asks the user for input\",\n",
@@ -53,14 +33,13 @@
     "  ]\n",
     "\n",
     "available_functions = {\n",
-    "    \"calc_latex_math_expression\": calc_latex_math_expression,\n",
     "    \"ask_user\": ask_user,\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -121,18 +100,16 @@
      "output_type": "stream",
      "text": [
       "user: If my brother is 3 years younger than me, how old is my brother? Ask user for any missing information. Explain step by step.\n",
-      "assistant: Sure, in order to perform the calculation, I need to know your age. Let me ask for this.\n",
-      " -> calling function ask_user with arguments \"{\\n  \\\"question\\\": \\\"What is your current age?\\\"\\n}\"\n",
+      " -> calling function ask_user with arguments \"{\\n  \\\"question\\\": \\\"How old are you?\\\"\\n}\"\n",
       "function: 34\n",
-      "assistant: Thank you for providing your age. Now we can proceed with the calculation. Here's the step-by-step process:\n",
+      "assistant: Given your age is 34 years, to find the age of your brother, \n",
       "\n",
-      "1. You mentioned that your brother is 3 years younger than you.\n",
-      "2. Your age is 34 years.\n",
-      "3. To find out your brother's age, we subtract 3 from your age.\n",
+      "We subtract 3 years from your age,\n",
+      "Because your brother is 3 years younger than you.\n",
       "\n",
-      "So, the calculation will be: 34 - 3 = 31\n",
+      "So, 34 years (your age) - 3 years = 31 years.\n",
       "\n",
-      "Therefore, your brother is 31 years old.\n"
+      "Hence, your brother is 31 years old.\n"
      ]
     }
    ],
