Multi line string for clarity

--- a/functions/ask_user.ipynb
+++ b/functions/ask_user.ipynb
@@ -92,30 +92,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "user: If my brother is 3 years younger than me, how old is my brother? Ask user for any missing information. Explain step by step.\n",
+      "user: If my brother is 3 years younger than me, how old is my brother?\n",
+      "    Ask user for any missing information.\n",
+      "    Explain step by step.\n",
       " -> calling function ask_user with arguments \"{\\n  \\\"question\\\": \\\"How old are you?\\\"\\n}\"\n",
-      "function: 34\n",
-      "assistant: Given your age is 34 years, to find the age of your brother, \n",
+      "function: 35\n",
+      "assistant: Since your brother is 3 years younger than you, and you are 35, we will subtract 3 from 35 to find out your brother's age.\n",
       "\n",
-      "We subtract 3 years from your age,\n",
-      "Because your brother is 3 years younger than you.\n",
+      "Step by step explanation:\n",
+      "1. The age difference between you and your brother is 3 years.\n",
+      "2. Your current age is 35 years.\n",
+      "3. To find out your brother's age, we need to subtract the age difference from your age.\n",
+      "4. In other words, your brother's age would be 35 years - 3 years = 32 years.\n",
       "\n",
-      "So, 34 years (your age) - 3 years = 31 years.\n",
-      "\n",
-      "Hence, your brother is 31 years old.\n"
+      "So, your brother is 32 years old.\n"
      ]
     }
    ],
    "source": [
-    "run_conversation(\"If my brother is 3 years younger than me, how old is my brother? Ask user for any missing information. Explain step by step.\")"
+    "run_conversation(\"\"\"If my brother is 3 years younger than me, how old is my brother?\n",
+    "    Ask user for any missing information.\n",
+    "    Explain step by step.\"\"\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
