--- a/functions/ask_user.ipynb
+++ b/functions/ask_user.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ask user for information\n",
+    "\n",
+    "Demonstrates how to configure the LLM to ask the user for information it needs for reasoning but doesn't know."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
