--- a/functions/math.ipynb
+++ b/functions/math.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Symbolic Math with SymPy function call example\n",
+    "\n",
+    "Demonstrates how to delegate to [SymPy](https://www.sympy.org/en/index.html) to perform symbolic math. We use LaTeX to represent the math expressions and the [latex2sympy2](https://pypi.org/project/latex2sympy2/) to convert the LaTeX to SymPy expressions."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
