--- a/functions/weather.ipynb
+++ b/functions/weather.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Weather function call example\n",
+    "\n",
+    "From OpenAI blog post [Function calling and other API updates](https://openai.com/blog/function-calling-and-other-api-updates)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
